--- a/Shop/templates/Shop/main.html
+++ b/Shop/templates/Shop/main.html
@@ -15,20 +15,22 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
 		<!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+		<link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+
 
 		<!-- Slick -->
-		<link type="text/css" rel="stylesheet" href="{% static 'css/slick.css' %}">
-		<link type="text/css" rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
+		<link type="text/css" rel="stylesheet" href="{% static 'css/slick.css' %}"/>
+		<link type="text/css" rel="stylesheet" href="{% static 'css/slick-theme.css' %}"/>
+		<link type="text/css" rel="stylesheet" href="{% static 'css/cart.css' %}"/>
 
 		<!-- nouislider -->
-		<link type="text/css" rel="stylesheet" href="{% static 'css/nouislider.min.css' %}">
+		<link type="text/css" rel="stylesheet" href="{% static 'css/nouislider.min.css' %}"/>
 
 		<!-- Font Awesome Icon -->
-		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
 
 		<!-- Custom stlylesheet -->
-		<link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}">
+		<link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,13 +38,25 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-
-		<!-- Latest compiled and minified CSS & JS -->
-		<link rel="stylesheet" media="screen" href="{% static '//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css' %}">
-		<script src="//code.jquery.com/jquery.js"></script>
-		<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-
+		  <script type="text/javascript">
+			  var user = '{{request.user}}'
+		function getCookie(name) {
+			let cookieValue = null;
+			if (document.cookie && document.cookie !== '') {
+				const cookies = document.cookie.split(';');
+				for (let i = 0; i < cookies.length; i++) {
+					const cookie = cookies[i].trim();
+					// Does this cookie string begin with the name we want?
+					if (cookie.substring(0, name.length + 1) === (name + '=')) {
+						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+						break;
+					}
+				}
+			}
+			return cookieValue;
+}
+const csrftoken = getCookie('csrftoken');
+		  </script>
     </head>
 	<body>
 		<!-- HEADER -->
@@ -62,7 +76,7 @@
     							<a href="#">View Profile</a>
     							<a href="#">History</a>
     							<a href="#">Log Out</a>
- 							 </div>
+ 							</div>
 						</li>
 					</ul>
 				</div>
@@ -99,43 +113,31 @@
 						<!-- ACCOUNT -->
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
-
-
-
-
 								<!-- Cart -->
 								<div class="dropdown">
 									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 										<i class="fa fa-shopping-cart"></i>
 										<span>Your Cart</span>
+										<div class="qty">{{cart.get_total_product}}</div>
 									</a>
 									<div class="cart-dropdown">
 										<div class="cart-list">
+											{% for cart in cart_product %}
 											<div class="product-widget">
 												<div class="product-img">
-													<img src="./img/product01.png" alt="">
+													<img src="{{cart.product.ImageURL}}" alt="">
 												</div>
 												<div class="product-body">
-													<h3 class="product-name"><a href="#">product name goes here</a></h3>
-													<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
+													<h3 class="product-name"><a href="#">{{cart.product.name}}</a></h3>
+													<h4 class="product-price"><span class="qty">{{cart.quantity}}x</span>{{cart.product.price|intcomma}},000 Vnd</h4>
 												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
+												<button data-product={{cart.product.id}}   data-action = "remove" class="delete update-cart"><i class="fa fa-close"></i></button>
 											</div>
-
-											<div class="product-widget">
-												<div class="product-img">
-													<img src="./img/product02.png" alt="">
-												</div>
-												<div class="product-body">
-													<h3 class="product-name"><a href="#">product name goes here</a></h3>
-													<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
-												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
-											</div>
+											{% endfor %}
 										</div>
 										<div class="cart-summary">
-											<small>3 Item(s) selected</small>
-											<h5>SUBTOTAL: $2940.00</h5>
+											<small>{{cart.get_total_product}} Item(s) selected</small>
+											<h5>SUBTOTAL: {{cart.get_total_price_product|intcomma}},000 Vnd</h5>
 										</div>
 										<div class="cart-btns">
 											<a href="#">View Cart</a>
@@ -347,6 +349,8 @@
 		<script src="{% static 'js/slick.min.js' %}"></script>
 		<script src="{% static 'js/nouislider.min.js' %}"></script>
 		<script src="{% static 'js/main.js' %}"></script>
+		<script src="{% static 'js/cart.js' %}"></script>
+		<script src="{% static 'js/filterProduct.js' %}"></script>
 		<script src="{% static 'js/jquery.zoom.min.js' %}"></script>
 
 
