--- a/Shop/templates/Shop/Home.html
+++ b/Shop/templates/Shop/Home.html
@@ -2,6 +2,26 @@
 {% load static %}
 {% load humanize %}
 {% block content %}
+<nav id="navigation">
+			<!-- container -->
+			<div class="container">
+				<!-- responsive-nav -->
+				<div id="responsive-nav">
+					<!-- NAV -->
+					<ul class="main-nav nav navbar-nav">
+						<li class="active"><a href="{% url 'home' %}">Home</a></li>
+						<li><a href="{% url 'store' %}">Store</a></li>
+
+
+
+
+					</ul>
+					<!-- /NAV -->
+				</div>
+				<!-- /responsive-nav -->
+			</div>
+			<!-- /container -->
+		</nav>
 <div class="section">
 
 			<div class="container">
