--- a/Shop/templates/Shop/Store.html
+++ b/Shop/templates/Shop/Store.html
@@ -28,7 +28,6 @@
 			<!-- row -->
 			<div class="row">
 				<!-- ASIDE -->
-
 				<!-- /ASIDE -->
 
 				<!-- STORE -->
@@ -36,48 +35,12 @@
                     <!-- store fillter -->
                     <div class="store-filter clearfix">
                         <div class="store-sort">
-                            <label>
-                                Demand:
-                                <select class="input-select">
-                                    <option value="0">Office</option>
-                                    <option value="1">Gaming</option>
-                                    <option value="2">Workstation</option>
-                                </select>
-                            </label>
-
-                            <label>
-                                Brand:
-                                <select class="input-select">
-                                    <option value="0">Asus</option>
-                                    <option value="1">Dell</option>
-                                    <option value="2">Hp</option>
-                                    <option value="3">Acer</option>
-                                    <option value="4">Lenovo</option>
-                                    <option value="5">MSI</option>
-                                </select>
-                            </label>
-
-                            <label>
-                                Configuration:
-                                <select class="input-select">
-                                    <option value="0">i3</option>
-                                    <option value="1">i5</option>
-                                    <option value="2">i7</option>
-                                    <option value="3">i9</option>
-                                </select>
-                            </label>
-
-                            <label>
-                                Price:
-                                <select class="input-select">
-                                    <option value="1">10-15</option>
-                                    <option value="2">15-20</option>
-                                    <option value="3">20-25</option>
-                                    <option value="4">25-30</option>
-									<option value="4">>30</option>
-
-                                </select>
-                            </label>
+							<form>
+								<label>
+									{{myfilter.form}}
+								</label>
+								<button style="background-color: #D10024;" class="btn btn-danger btn-button">Search</button>
+							</form>
 
                         </div>
 
@@ -93,7 +56,7 @@
 									<img src="{{product.ImageURL}}" alt="">
 								</div>
 								<div class="product-body">
-									<p class="product-category">{{product.category}}</p>
+									<p class="product-category">{{product.demand}}</p>
 									<h3 class="product-name"><a href="#">{{product.name}}</a></h3>
 									<h4 class="product-price">{{product.price|intcomma}},000 Vnd</h4>
 									<div class="product-rating">
@@ -110,7 +73,8 @@
 									</div>
 								</div>
 								<div class="add-to-cart">
-									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+									<button data-product={{product.id}}  data-action = "add" class="add-to-cart-btn update-cart"><i class="fa fa-shopping-cart"></i> add to cart</button>
+
 								</div>
 							</div>
 						</div>
@@ -121,7 +85,7 @@
 
 					<!-- store bottom filter -->
 					<div class="store-filter clearfix">
-							<span class="store-qty">Showing 20-100 products</span>
+
 							<ul class="store-pagination">
 								{% if products.has_previous %}
    									 <li><a href="?page={{ products.previous_page_number }}"><i class="fa fa-angle-left"></i></a></li>
