--- a/Account/templates/profile.html
+++ b/Account/templates/profile.html
@@ -1,4 +1,4 @@
-{% include 'Shop/main.html' %}
+{% extends 'Shop/main.html' %}
 {% load static %}
 {% block head %}
 		<!-- Google font -->
@@ -27,6 +27,22 @@
 {% endblock %}
 
 {% block content %}
+	<nav id="navigation">
+            <!-- container -->
+            <div class="container">
+                <!-- responsive-nav -->
+                <div id="responsive-nav">
+                    <!-- NAV -->
+                    <ul class="main-nav nav navbar-nav">
+                        <li><a href="{% url 'home' %}">Home</a></li>
+                        <li><a href="{% url 'store' %}">Store</a></li>
+                    </ul>
+                    <!-- /NAV -->
+                </div>
+                <!-- /responsive-nav -->
+            </div>
+            <!-- /container -->
+        </nav>
         <div class="container" id="profile">
             <h2>Hồ Sơ Của Tôi</h2><br>
             <form class="clientProfile" action="#" method="post">
